# soda-dataquality-pipeline-orders

./: .gitignore  README.md  exemplo.env  pyproject.toml  requirements.txt
app/: bigquery.py  duckdb_operations.py  pipeline.py  utils.py
app/soda/: scan_operations.py
app/soda/checks/trusted/: trusted_orders.yaml
pipeline/: bigquery.py  bigquery_load_data.py  duckdb_operations.py  pipeline.py
pipeline/input_data/: orders.csv
pipeline/soda/: configuration.yml  scan_operations.py
pipeline/soda/checks/ingest/: raw_orders.yaml
pipeline/soda/checks/raw/: raw_orders.yaml
pipeline/soda/checks/transform/: trusted_orders.yaml
